# fsim-pedals

./: Cargo.toml  README.md
3d-printing/: ball-joint.3mf  ball-joint.scad  ball-joint.stl  baseboard.slvs  bearing-insert.3mf  bearing-insert.slvs  bearing-insert.stl  bearing-mount.3mf  bearing-mount.scad  bearing-mount.slvs  bearing-mount.stl  gear-tests.scad  gear-tests.stl  gears.scad  lever-disk.3mf  lever-disk.scad  lever-disk.stl  lever-mount.3mf  lever-mount.scad  lever-mount.stl  pedal-base.3mf  pedal-base.scad  pedal-base.stl  pedal-connector.3mf  pedal-connector.slvs  pedal-connector.stl
3d-printing/nimrod/: LICENSE.txt  README.txt
3d-printing/nimrod/files/: NimRodEnd_M4rod_M3Screw.stl  Nimrod_v1.scad  nimrod-test1.stl
3d-printing/nimrod/images/: card_preview_NimRodEnd_M4rod_M3Screw.stl  large_display_Journee_037.stl  large_display_Journee_052.stl  large_display_Versluis_037.stl  large_display_Versluis_039.stl  large_display_trophy_top20200102-50-1oicxhq.stl  large_preview_NimRodEnd_M4rod_M3Screw.stl  large_thumb_NimRodEnd_M4rod_M3Screw.stl  medium_preview_NimRodEnd_M4rod_M3Screw.stl  medium_thumb_NimRodEnd_M4rod_M3Screw.stl  small_preview_NimRodEnd_M4rod_M3Screw.stl  small_thumb_NimRodEnd_M4rod_M3Screw.stl  tiny_preview_NimRodEnd_M4rod_M3Screw.stl  tiny_thumb_NimRodEnd_M4rod_M3Screw.stl  tinycard_preview_NimRodEnd_M4rod_M3Screw.stl
software/fs-pedals/: Cargo.toml
software/fs-pedals/src/: joystick.rs  main.rs
src/: joystick.rs  main.rs
